<resources>
    <string name="app_name">Mi Peso Ideal</string>
    <string name="fecha">%1d/%2d/%3d</string>

    <string name="edad">Edad</string>
    <string name="fechaestatica">5/9/1994</string>
    <string name="pie">Pie</string>
    <string name="metros">Metros</string>
    <string name="pulgada">Pulgada</string>
    <string name="descripcioCalendario">Calendario para escoger tu fecha de nacimientos</string>
    <string name="descripcionWoman">Genero femenino</string>
    <string name="DescripcionHombre">Genero Masculino</string>
    <string name="DescripcionPeso">Libras Actuales</string>
    <string name="descripcionAltura">Altura que tienes</string>
    <string name="unidad">Unidad de medida</string>
    <string name="kilogramotextoON">KG | M</string>
    <string name="kilogramotextooff">KG | M</string>
    <string name="libratextoon">LB | PG</string>
    <string name="libratextooff">LB | PG</string>
    <string name="libra">Libras</string>
    <string name="kilogramos">Kilogramos</string>
    <string name="title_activity_imc">IMC</string>
    <string name="title_activity_tabla_de_pesos">TablaDePesos</string>
    <string name="muy_delgado">Muy Delgado</string>
    <string name="menor_18"> Menor 18</string>
    <string name="normal"> Normal</string>
    <string name="normalIMC">18.5 &#8211; 25</string>
    <string name="gordo">Gordo</string>
    <string name="gordoIMC">25 &#8211; 30</string>
    <string name="obeso">Obeso</string>
    <string name="obesoIMC">30 &#8211; 40</string>
    <string name="rango_peso">Peso Saludable</string>
    <string name="rango_pesoIMC">46 &#8211; 50 kg</string>
    <string name="peso_ideal">Peso ideal</string>
    <string name="peso_idealIMC">%1$.1f kg</string>
    <string name="rango_peso_ideal">%1$.1f &#8211; %2$.1f kg</string>
    <string name="extra_obeso">Extra Obeso</string>
    <string name="extra_obesoIMC">> 40</string>
    <string name="sobre_peso">Sobre peso</string>
    <string name="sobre_pesoIMC">%1$.1f kg</string>
    <string name="IMC">25.0</string>
    <string name="tabla_peso">Ver tabla</string>
    <string name="imagen_descripcion">Discripcion de las images</string>
    <string name="imc">IMC</string>
    <string name="imc_value">%1$.1f</string>
    <string name="altura">%1$.1f</string>
    <string name="libra_adapter">%1$.1f</string>
    <string name="kilos_de_mas"> Kilos de mas</string>
    <string name="kilos_de_menos"> Kilos de menos</string>
    <string name="libra_actual">%1$.1f</string>
    <string name="estatura">Estatura</string>
    <string name="libras_minima">Libras minima</string>
    <string name="libras_maxima">Libras Maxima</string>
    <string name="genero">genero</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="broca">Broca</string>
    <string name="wan_der_vael">Wan Der Vael</string>
    <string name="formula_perrault">Perrault</string>
    <string name="lorentz">Lorentz</string>
    <string name="mlic">MLIC</string>
    <string name="ver_peso_ideal">Ver Otros resultados</string>

</resources>
