<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/estatura"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/libramini"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/libras_minima"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/libramax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/libras_maxima"
        android:textSize="18sp" />
</LinearLayout>
